--- a/pom.xml
+++ b/pom.xml
@@ -21,15 +21,22 @@
 
   <dependencies>
 
-    <!-- FIXME: proper Junit dependency. -->
-    <!--<dependency>
+    <!-- JUnit -->
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.13.1</version>
       <scope>test</scope>
-    </dependency>-->
+    </dependency>
 
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>RELEASE</version>
+      <scope>test</scope>
+    </dependency>
 
+    <!-- Jakarta -->
     <!-- We use jakarta since the javax dependency is deprecated -->
     <dependency>
       <groupId>jakarta.ws.rs</groupId>
@@ -37,6 +44,7 @@
       <version>3.1.0</version>
     </dependency>
 
+    <!-- glassfish/jesey -->
     <dependency>
       <groupId>org.glassfish.jersey.containers</groupId>
       <artifactId>jersey-container-servlet</artifactId>
