--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,6 @@
     </dependency>
 
     <!-- Jakarta -->
-    <!-- We use jakarta since the javax dependency is deprecated -->
     <dependency>
       <groupId>jakarta.ws.rs</groupId>
       <artifactId>jakarta.ws.rs-api</artifactId>
@@ -61,6 +60,19 @@
       <groupId>org.glassfish.jersey.media</groupId>
       <artifactId>jersey-media-json-jackson</artifactId>
       <version>3.1.3</version>
+      <scope>runtime</scope>
+    </dependency>
+
+    <!-- SLF4J LOGGING -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>2.0.9</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>2.0.9</version>
       <scope>runtime</scope>
     </dependency>
   </dependencies>
